--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Inici</title>
+  <link rel="stylesheet" href="estils.css/css.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    
+
+  <header>
+    <nav class="nav">
+      <a href="view/en/index_en.html"><i class="fas fa-earth-americas"></i></a>
+      <div class="nav-right-group">
+        <a href="view/experience.html"><i class="fas fa-road"></i></a>
+        <a href="view/experiencia.html"><i class="fas fa-church"></i></a>
+        <a href="view/estudis.html"><i class="fas fa-id-card"></i></a>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Benvingut/da al meu lloc web</h1>
+    <p>Aquesta és la pàgina principal del projecte web.</p>
+  </main>
+
 </body>
 </html>
