--- a/index.html
+++ b/index.html
@@ -1,29 +1,66 @@
 <!DOCTYPE html>
 <html lang="ca">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inici</title>
-  <link rel="stylesheet" href="estils.css/css.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Currículum Nil Ortega Prior</title>
+  <link rel="stylesheet" href="estils.css/css.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
-
-  <header>
-    <nav class="nav">
-      <a href="view/en/index_en.html"><i class="fas fa-earth-americas"></i></a>
-      <div class="nav-right-group">
-        <a href="view/experience.html"><i class="fas fa-road"></i></a>
-        <a href="view/experiencia.html"><i class="fas fa-church"></i></a>
-        <a href="view/estudis.html"><i class="fas fa-id-card"></i></a>
-      </div>
-    </nav>
-  </header>
+  <!-- NAVBAR SUPERIOR -->
+  <nav class="navbar">
+    <div class="left-icon">
+      <a href="cat/index.html"><i class="fas fa-globe"></i></a>
+    </div>
+    <div class="right-icons">
+      <a href="cast/index.html"><i class="fas fa-road"></i></a>
+      <a href="eng/index.html"><i class="fas fa-church"></i></a>
+      <a href="contacte.html"><i class="fas fa-id-card"></i></a>
+    </div>
+  </nav>
 
   <main>
-    <h1>Benvingut/da al meu lloc web</h1>
-    <p>Aquesta és la pàgina principal del projecte web.</p>
+    <h1>Curriculum</h1>
+    <h2>Nil Ortega Prior</h2>
+
+    <div class="texto-largo">
+      Hola, em dic Nil Ortega Prior, tinc 16 anys i sóc de Barcelona, més concretament de L'Hospitalet de Llobregat (barri del Gornal). Sóc una persona curiosa. M'agrada força manipular objectes i interessar-me pel seu funcionament; gaudeixo investigant coses en general. Una de les meves grans aficions és escoltar música: sempre que estic sol treballant, m'agrada tenir alguna cosa de fons. També em crida molt l’atenció el món de la tecnologia i les novetats innovadores que van apareixent amb el temps. A més, intento aprendre coses noves i donar el millor de mi en tot allò que faig.
+    </div>
+
+    <img class="profile-img" src="img/foto.jpg" alt="Foto de Nil Ortega Prior" />
+
+    <h3>Objectiu Professional</h3>
+    <div class="texto-largo">
+      Mi objetivo profesional es adquirir experiencia práctica y conocimiento en redes en una empresa de prácticas. Busco aplicar mis habilidades en redes locales o ahora contribuir al crecimiento y eficiencia de la organización, mientras sigo emprendiendo y creciendo profesionalmente en un ambiente dinámico y colaborativo
+    </div>
+
+    <h3>Les meves Competències</h3>
+    <div class="texto-largo">
+      - Treball en equip<br />
+      - Capacitat d’aprenentatge<br />
+      - Responsabilitat i puntualitat<br />
+      - Coneixements en HTML, CSS i JavaScript<br />
+      - Comunicació efectiva
+    </div>
+
+    <hr class="separador" />
+    <h3>Vídeo CSS</h3>
+    <div class="video-container">
+      <a href="#">Enllaç al vídeo</a>
+    </div>
   </main>
 
+  <!-- FOOTER AMB ICONES -->
+  <footer class="footer-nav">
+    <div class="left-icon">
+      <a href="cat/index.html"><i class="fas fa-globe"></i></a>
+    </div>
+    <div class="right-icons">
+      <a href="cast/index.html"><i class="fas fa-road"></i></a>
+      <a href="eng/index.html"><i class="fas fa-church"></i></a>
+      <a href="contacte.html"><i class="fas fa-id-card"></i></a>
+    </div>
+  </footer>
 </body>
 </html>
