--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <!-- NAVBAR SUPERIOR -->
   <nav class="navbar">
     <div class="left-icon">
-      <a href="cat/index.html"><i class="fas fa-globe"></i></a>
+      <a href="cat/index.html"><i class="fas fa-globe "></i></a>
     </div>
     <div class="right-icons">
       <a href="cast/index.html"><i class="fas fa-road"></i></a>
       <a href="eng/index.html"><i class="fas fa-church"></i></a>
       <a href="contacte.html"><i class="fas fa-id-card"></i></a>
     </div>
-  </nav>
+  </nav>  
 
   <main>
     <h1>Curriculum</h1>
@@ -28,7 +28,7 @@
       Hola, em dic Nil Ortega Prior, tinc 16 anys i sóc de Barcelona, més concretament de L'Hospitalet de Llobregat (barri del Gornal). Sóc una persona curiosa. M'agrada força manipular objectes i interessar-me pel seu funcionament; gaudeixo investigant coses en general. Una de les meves grans aficions és escoltar música: sempre que estic sol treballant, m'agrada tenir alguna cosa de fons. També em crida molt l’atenció el món de la tecnologia i les novetats innovadores que van apareixent amb el temps. A més, intento aprendre coses noves i donar el millor de mi en tot allò que faig.
     </div>
 
-    <img class="profile-img" src="img/foto.jpg" alt="Foto de Nil Ortega Prior" />
+    <img class="profile-img" src="img/Qui Soc.jpg" alt="Foto de Nil Ortega Prior" />
 
     <h3>Objectiu Professional</h3>
     <div class="texto-largo">
@@ -40,27 +40,16 @@
       - Treball en equip<br />
       - Capacitat d’aprenentatge<br />
       - Responsabilitat i puntualitat<br />
-      - Coneixements en HTML, CSS i JavaScript<br />
+      - Coneixements en HTML i CSS<br />
       - Comunicació efectiva
     </div>
 
     <hr class="separador" />
-    <h3>Vídeo CSS</h3>
+    <h3>Vídeo CS</h3>
     <div class="video-container">
       <a href="#">Enllaç al vídeo</a>
     </div>
   </main>
-
-  <!-- FOOTER AMB ICONES -->
-  <footer class="footer-nav">
-    <div class="left-icon">
-      <a href="cat/index.html"><i class="fas fa-globe"></i></a>
-    </div>
-    <div class="right-icons">
-      <a href="cast/index.html"><i class="fas fa-road"></i></a>
-      <a href="eng/index.html"><i class="fas fa-church"></i></a>
-      <a href="contacte.html"><i class="fas fa-id-card"></i></a>
-    </div>
-  </footer>
+ 
 </body>
 </html>
