index enetro + css
index entero + css

--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
   <!-- NAVBAR SUPERIOR -->
   <nav class="navbar">
     <div class="left-icon">
-      <a href="cat/index.html"><i class="fas fa-globe "></i></a>
+      <a href="views/en/index_en.html"><i class="fas fa-globe"></i></a>
     </div>
     <div class="right-icons">
-      <a href="cast/index.html"><i class="fas fa-road"></i></a>
-      <a href="eng/index.html"><i class="fas fa-church"></i></a>
-      <a href="contacte.html"><i class="fas fa-id-card"></i></a>
+      <a href="index.html"><i class="fas fa-id-card"></i></a>
+      <a href="views/es/educacion.html"><i class="fas fa-home"></i></a>
+      <a href="views/es/experiencia.html"><i class="fas fa-briefcase"></i></a>
     </div>
-  </nav>  
-
+  </nav>
   <main>
     <h1>Curriculum</h1>
     <h2>Nil Ortega Prior</h2>
 
-    <div class="texto-largo">
-      Hola, em dic Nil Ortega Prior, tinc 16 anys i sóc de Barcelona, més concretament de L'Hospitalet de Llobregat (barri del Gornal). Sóc una persona curiosa. M'agrada força manipular objectes i interessar-me pel seu funcionament; gaudeixo investigant coses en general. Una de les meves grans aficions és escoltar música: sempre que estic sol treballant, m'agrada tenir alguna cosa de fons. També em crida molt l’atenció el món de la tecnologia i les novetats innovadores que van apareixent amb el temps. A més, intento aprendre coses noves i donar el millor de mi en tot allò que faig.
-    </div>
+    <!-- PRESENTACIÓN EN HORIZONTAL -->
+    <div class="presentacion-horizontal">
+      <div class="texto-largo">
+        Hola, em dic Nil Ortega Prior, tinc 16 anys i sóc de Barcelona, més concretament de L'Hospitalet de Llobregat (barri del Gornal). Sóc una persona curiosa. M'agrada força manipular objectes i interessar-me pel seu funcionament; gaudeixo investigant coses en general. Una de les meves grans aficions és escoltar música: sempre que estic sol treballant, m'agrada tenir alguna cosa de fons. També em crida molt l’atenció el món de la tecnologia i les novetats innovadores que van apareixent amb el temps. A més, intento aprendre coses noves i donar el millor de mi en tot allò que faig.
+      </div>
 
-    <img class="profile-img" src="img/Qui Soc.jpg" alt="Foto de Nil Ortega Prior" />
+      <img class="profile-img" src="img/Qui Soc.jpg" alt="Foto de Nil Ortega Prior" />
+    </div>
 
     <h3>Objectiu Professional</h3>
     <div class="texto-largo">
@@ -38,18 +40,17 @@
     <h3>Les meves Competències</h3>
     <div class="texto-largo">
       - Treball en equip<br />
-      - Capacitat d’aprenentatge<br />
+      - Capacitat d'aprenentatge<br />
       - Responsabilitat i puntualitat<br />
       - Coneixements en HTML i CSS<br />
       - Comunicació efectiva
     </div>
 
     <hr class="separador" />
-    <h3>Vídeo CS</h3>
-    <div class="video-container">
-      <a href="#">Enllaç al vídeo</a>
+    <h3>Vídeo Curriculum</h3>
+    <div class="video-container ">
+      <iframe width="560" height="315" src="img/Video Presentacion Pagina Principal.mp4" frameborder="0" allowfullscreen></iframe>
     </div>
   </main>
- 
 </body>
 </html>
