nuevo fallo solucionado sin comentarios
nuevo fallo solucionado sin comentarios

--- a/index.html
+++ b/index.html
@@ -1,57 +1,55 @@
-<!DOCTYPE html> <!-- Define que el documento es HTML5 -->
-<html lang="ca"> <!-- Indica que el idioma principal del contenido es catalán -->
+<!DOCTYPE html>
+<html lang="ca">
 <head>
-  <meta charset="UTF-8" /> <!-- Codificación de caracteres en UTF-8 -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- Ajuste para dispositivos móviles -->
-  <title>Currículum Nil Ortega Prior</title> <!-- Título que aparece en la pestaña del navegador -->
-  <link rel="stylesheet" href="estils.css/css.css" /> <!-- Enlace al archivo de estilos CSS personalizado -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" /> <!-- Fuente de iconos Font Awesome -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Currículum Nil Ortega Prior</title>
+  <link rel="stylesheet" href="estils.css/css.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
   <!-- NAVBAR SUPERIOR -->
-  <nav class="navbar"> <!-- Barra de navegación principal -->
-    <div class="left-icon"> <!-- Contenedor del icono de la izquierda -->
-      <a href="views/en/index_en.html"><i class="fas fa-globe"></i></a> <!-- Icono de globo con enlace a la versión en inglés -->
+  <nav class="navbar">
+    <div class="left-icon">
+      <a href="views/en/index_en.html"><i class="fas fa-globe"></i></a>
     </div>
-    <div class="right-icons"> <!-- Contenedor de los iconos de la derecha -->
-      <a href="index.html"><i class="fas fa-id-card"></i></a> <!-- Icono de identificación, vuelve al inicio -->
-      <a href="views/es/educacion.html"><i class="fas fa-home"></i></a> <!-- Icono de casa, enlace a educación -->
-      <a href="views/es/experiencia.html"><i class="fas fa-briefcase"></i></a> <!-- Icono de maletín, enlace a experiencia -->
+    <div class="right-icons">
+      <a href="index.html"><i class="fas fa-id-card"></i></a>
+      <a href="views/es/educacion.html"><i class="fas fa-home"></i></a>
+      <a href="views/es/experiencia.html"><i class="fas fa-briefcase"></i></a>
     </div>
   </nav>
-
-  <main> <!-- Contenedor principal del contenido -->
-    <h1>Curriculum</h1> <!-- Título principal de la página -->
-    <h2>Nil Ortega Prior</h2> <!-- Subtítulo con el nombre -->
+  <main>
+    <h1>Curriculum</h1>
+    <h2>Nil Ortega Prior</h2>
 
     <!-- PRESENTACIÓN EN HORIZONTAL -->
-    <div class="presentacion-horizontal"> <!-- Sección de presentación con imagen y texto en horizontal -->
-      <div class="texto-largo"> <!-- Contenedor del texto de presentación -->
+    <div class="presentacion-horizontal">
+      <div class="texto-largo">
         Hola, em dic Nil Ortega Prior, tinc 16 anys i sóc de Barcelona, més concretament de L'Hospitalet de Llobregat (barri del Gornal). Sóc una persona curiosa. M'agrada força manipular objectes i interessar-me pel seu funcionament; gaudeixo investigant coses en general. Una de les meves grans aficions és escoltar música: sempre que estic sol treballant, m'agrada tenir alguna cosa de fons. També em crida molt l’atenció el món de la tecnologia i les novetats innovadores que van apareixent amb el temps. A més, intento aprendre coses noves i donar el millor de mi en tot allò que faig.
       </div>
 
-      <img class="profile-img" src="img/Qui Soc.jpg" alt="Foto de Nil Ortega Prior" /> <!-- Imagen de perfil -->
+      <img class="profile-img" src="img/Qui Soc.jpg" alt="Foto de Nil Ortega Prior" />
     </div>
 
-    <h3>Objectiu Professional</h3> <!-- Título para la sección de objetivo profesional -->
-    <div class="texto-largo"> <!-- Texto explicando el objetivo profesional -->
+    <h3>Objectiu Professional</h3>
+    <div class="texto-largo">
       Mi objetivo profesional es adquirir experiencia práctica y conocimiento en redes en una empresa de prácticas. Busco aplicar mis habilidades en redes locales o ahora contribuir al crecimiento y eficiencia de la organización, mientras sigo emprendiendo y creciendo profesionalmente en un ambiente dinámico y colaborativo
     </div>
 
-    <h3>Les meves Competències</h3> <!-- Título de sección sobre competencias -->
-    <div class="texto-largo"> <!-- Lista de competencias personales y técnicas -->
-      - Treball en equip<br /> <!-- Trabajo en equipo -->
-      - Capacitat d'aprenentatge<br /> <!-- Capacidad de aprendizaje -->
-      - Responsabilitat i puntualitat<br /> <!-- Responsabilidad y puntualidad -->
-      - Coneixements en HTML i CSS<br /> <!-- Conocimientos en HTML y CSS -->
-      - Comunicació efectiva <!-- Comunicación efectiva -->
+    <h3>Les meves Competències</h3>
+    <div class="texto-largo">
+      - Treball en equip<br />
+      - Capacitat d'aprenentatge<br />
+      - Responsabilitat i puntualitat<br />
+      - Coneixements en HTML i CSS<br />
+      - Comunicació efectiva
     </div>
 
-    <hr class="separador" /> <!-- Línea separadora entre secciones -->
-
-    <h3>Vídeo Curriculum</h3> <!-- Título para la sección de video currículum -->
-    <div class="video-container "> <!-- Contenedor para el video -->
-      <iframe width="560" height="315" src="img/Video Presentacion Pagina Principal.mp4" frameborder="0" allowfullscreen></iframe> <!-- Inserta un video en formato iframe desde un archivo local -->
+    <hr class="separador" />
+    <h3>Vídeo Curriculum</h3>
+    <div class="video-container ">
+      <iframe width="560" height="315" src="img/Video Presentacion Pagina Principal.mp4" frameborder="0" allowfullscreen></iframe>
     </div>
   </main>
 </body>
